--- a/MVVM Practice/MainWindow.xaml
+++ b/MVVM Practice/MainWindow.xaml
@@ -18,6 +18,6 @@
         </Grid.RowDefinitions>
         <Button Grid.Column="0" Grid.Row="0" Margin="20" Content="MVVM&#xD;&#xA;Pattern" FontSize="20" Click="Button_Click"/>
         <Button Grid.Column="1" Grid.Row="0" Margin="20" Content="Command&#xD;&#xA;(Button Click)" FontSize="20" Click="Button_Click_1"/>
-        <Button Grid.Column="2" Grid.Row="0" Margin="20" Content="Interaction&#xD;&#xA;(UI Event)" FontSize="20" Click="Button_Click_2"/>
+        <Button Grid.Column="2" Grid.Row="0" Margin="20" Content="Interaction&#xD;&#xA;(UI Event)" FontSize="20" />
     </Grid>
 </Window>
